--- a/.github/workflows/export_app.yml
+++ b/.github/workflows/export_app.yml
@@ -25,10 +25,15 @@ jobs:
     - name: Select latest Xcode
       run: "sudo xcode-select -s /Applications/Xcode_$XC_VERSION.app"
     - uses: actions/checkout@v2
-    - name: setup-cocoapods
-      uses: maxim-lobanov/setup-cocoapods@v1
-      with:
-        podfile-path: ./Podfile.lock
+    # - name: setup-cocoapods
+    #   uses: maxim-lobanov/setup-cocoapods@v1
+    #   with:
+    #     podfile-path: ./Podfile.lock
+    - name: Install Dependencies
+      run: |
+        pod install --repo-update
+      shell: bash
+    - uses: ty0x2333/cocoapods-action@master
     - name: Configure Keychain
       run: |
         security create-keychain -p "" "$KEYCHAIN"
