--- a/.github/workflows/export_app.yml
+++ b/.github/workflows/export_app.yml
@@ -25,14 +25,8 @@ jobs:
     - name: Select latest Xcode
       run: "sudo xcode-select -s /Applications/Xcode_$XC_VERSION.app"
     - uses: actions/checkout@v2
-    # - name: setup-cocoapods
-    #   uses: maxim-lobanov/setup-cocoapods@v1
-    #   with:
-    #     podfile-path: ./Podfile.lock
     - name: Install Dependencies
-      run: |
-        ls
-        pod install --repo-update
+      run: pod install --repo-update
       shell: bash
     - name: Configure Keychain
       run: |
