--- a/.github/workflows/export_app.yml
+++ b/.github/workflows/export_app.yml
@@ -1,7 +1,7 @@
 name: Export app
 on: 
   push:
-    branches: [master, github-actions]
+    branches: []
 jobs:
   build:
     runs-on: [macos-latest]
