--- a/scaffold/Configs/Stage/GoogleService-Info.plist
+++ b/scaffold/Configs/Stage/GoogleService-Info.plist
@@ -3,21 +3,21 @@
 <plist version="1.0">
 <dict>
 	<key>CLIENT_ID</key>
-	<string>376979810533-qbcdgdhbj5keiqbg7tlqji1c7b785sou.apps.googleusercontent.com</string>
+	<string>791231027679-5snn9fhosh89pu942et20p3u145k4bj4.apps.googleusercontent.com</string>
 	<key>REVERSED_CLIENT_ID</key>
-	<string>com.googleusercontent.apps.376979810533-qbcdgdhbj5keiqbg7tlqji1c7b785sou</string>
+	<string>com.googleusercontent.apps.791231027679-5snn9fhosh89pu942et20p3u145k4bj4</string>
 	<key>API_KEY</key>
-	<string>AIzaSyDFUfexCUZHYxxn9RgWnF2VnAat4wZ-8N0</string>
+	<string>AIzaSyAbjYLvQCHgu2pgCjf60jatMJhxe_3dp6E</string>
 	<key>GCM_SENDER_ID</key>
-	<string>376979810533</string>
+	<string>791231027679</string>
 	<key>PLIST_VERSION</key>
 	<string>1</string>
 	<key>BUNDLE_ID</key>
 	<string>com.solutelabs.scaffold.stage</string>
 	<key>PROJECT_ID</key>
-	<string>ios-scaffold</string>
+	<string>stircrazykids-stage</string>
 	<key>STORAGE_BUCKET</key>
-	<string>ios-scaffold.appspot.com</string>
+	<string>stircrazykids-stage.appspot.com</string>
 	<key>IS_ADS_ENABLED</key>
 	<false></false>
 	<key>IS_ANALYTICS_ENABLED</key>
@@ -29,6 +29,6 @@
 	<key>IS_SIGNIN_ENABLED</key>
 	<true></true>
 	<key>GOOGLE_APP_ID</key>
-	<string>1:376979810533:ios:8f50a7e8b740880a0ccc0c</string>
+	<string>1:791231027679:ios:df8fd052adf807e19a4c6a</string>
 </dict>
 </plist>
