--- a/scaffold/Info.plist
+++ b/scaffold/Info.plist
@@ -46,7 +46,7 @@
 					<key>UISceneDelegateClassName</key>
 					<string>$(PRODUCT_MODULE_NAME).SceneDelegate</string>
 					<key>UISceneStoryboardFile</key>
-					<string>MenuOrder</string>
+					<string>OrderSteup</string>
 				</dict>
 			</array>
 		</dict>
@@ -60,7 +60,7 @@
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
-	<string>MenuOrder</string>
+	<string>OrderSteup</string>
 	<key>UIRequiredDeviceCapabilities</key>
 	<array>
 		<string>armv7</string>
