--- a/.swiftlint.yml
+++ b/.swiftlint.yml
@@ -1,7 +1,10 @@
 disabled_rules:
   - trailing_whitespace
+  - identifier_name
+  - force_cast
   
 excluded:
   - Carthage
   - Pods
   - R.generated.swift
+  - StoryboardHelper.swift
