--- a/scaffold/Info.plist
+++ b/scaffold/Info.plist
@@ -4,6 +4,8 @@
 <dict>
 	<key>AppEnvironment</key>
 	<string>$(ENVIRONMENT)</string>
+    <key>BASE_URL</key>
+    <string>${BASE_URL}</string>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>$(DEVELOPMENT_LANGUAGE)</string>
 	<key>CFBundleExecutable</key>
